# wgpu_planet_simulator

./: Cargo.toml  README.md  imgui.ini  index.html
res/: ring.mtl  sphere.mtl
src/: lib.rs  light.wgsl  main.rs  model.rs  resources.rs  shader.wgsl
