[package]
name = "wgpu_planet_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
wgpu = "0.16"
winit = "0.28"
bytemuck = { version = "1.12", features = [ "derive" ] }
env_logger = "0.10"
cgmath = "0.18"
log = "0.4"
cfg-if = "1"
tobj = { version = "3.2.5", features = [
    "async",
]}
instant = "0.1"
pollster = "0.3"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "tiff"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11" }
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "0.16", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[[bin]]
name = "wgpu_planet_simulator"
path = "src/main.rs"